fix spacing in chrome

--- a/src/css/objects/bar_grid.object.pcss
+++ b/src/css/objects/bar_grid.object.pcss
@@ -1,6 +1,5 @@
 #accessabar .bar-grid {
     display: grid;
-    grid-template-rows: repeat(3, 100%);
     grid-template-areas:
         "bar"
         "underbar"
